Игнорировать предупреждения и удаления тренерскому штабу